# haskell-uebungen

./: .gitignore  LICENSE  README.md
basics/: README.md  basics.cabal
basics/src/: Aufgaben.hs
basics/test/: UnitTest.hs
fortgeschritten/functors-fmaps/: functors-fmaps.cabal
fortgeschritten/functors-fmaps/src/: Aufgaben.hs
fortgeschritten/functors-fmaps/test/: UnitTest.hs
fortgeschritten/monade-io-um/: monade-io-um.cabal
fortgeschritten/monade-io-um/src/: Aufgaben.hs
fortgeschritten/monade-io-um/test/: UnitTest.hs
stufe1/: README.md  stufe1.cabal
stufe1/src/: Aufgaben.hs
stufe1/test/: ab49.hs  bis49.hs
stufe2/: README.md  stufe2.cabal
stufe2/src/: Aufgaben.hs
stufe2/test/: UnitTest.hs
