name:                stufe1
version:             1.0
build-type:          Simple
cabal-version:       2.0

library
  exposed-modules:    Aufgaben
  hs-source-dirs:     src
  build-depends:      base
  default-language:   Haskell2010

-- Unit test suite 1 (First Half)
test-suite bis49
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        bis49.hs
  build-depends:  stufe1, base, tasty, tasty-hunit, HUnit-approx

-- Unit test suite 2 (Second Half)
test-suite ab49
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ab49.hs
  build-depends:  stufe1, base, tasty, tasty-hunit, HUnit-approx
