name:                monade-io-um
version:             1.0
build-type:          Simple
cabal-version:       2.0

library
  exposed-modules:    Aufgaben
  hs-source-dirs:     src
  build-depends:      base, random
  default-language:   Haskell2010

-- Unit test suite
test-suite unit
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        UnitTest.hs
  build-depends:  monade-io-um, base, directory, tasty, tasty-hunit, HUnit-approx